Fix letter spacing on some text

--- a/styles/main.less
+++ b/styles/main.less
@@ -52,16 +52,17 @@ a {
 // Shared rules for main-nav and company-nav
 
 nav > ul {
-  margin: 0 auto;
-  padding: 0;
   border: 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  font-size: 0.85em;
   font-family: 'Montserrat', sans-serif;
+  font-size: 0.85em;
   font-weight: bold;
+  justify-content: center;
+  letter-spacing: 1px;
+  margin: 0 auto;
   max-width: 1085px;
+  padding: 0;
   text-transform: uppercase;
 
   li {
