--- a/styles/services.less
+++ b/styles/services.less
@@ -5,6 +5,7 @@
 
   h1 {
     font-size: 2.75em;
+    letter-spacing: 1px;
   }
 
   h2 {
